// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saves changes in localStorage 1`] = `
Object {
  "isSelected": false,
}
`;

exports[`saves changes in localStorage 2`] = `null`;

exports[`saves changes in localStorage 3`] = `
Object {
  "isSelected": true,
}
`;

exports[`saves changes in localStorage 4`] = `"{\\"isSelected\\":true}"`;
